# lake

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  goal.md  init.sh  justfile  mise.toml  release-please-config.json
.claude/: settings.json
.codex/: config.toml  hooks.json
.config/: nextest.toml
.github/: actionlint.yaml
crates/lake-adapters/: AGENT.md  Cargo.toml
crates/lake-adapters/src/: lib.rs  mcap.rs  model.rs  neutral.rs  rrd.rs  source.rs
crates/lake-adapters/tests/: format_adapters.rs  mcap.rs  rrd.rs
crates/lake-adapters/tests/support/: mod.rs
crates/lake-catalog/: AGENT.md  Cargo.toml
crates/lake-catalog/src/: catalog.rs  lib.rs  ops.rs  schema.rs  source.rs
crates/lake-cli/: AGENT.md  Cargo.toml
crates/lake-cli/src/: main.rs  metrics.rs  observability.rs
crates/lake-cli/src/commands/: catalog_finalize.rs  client.rs  dynamo_migrate.rs  gc.rs  ingest.rs  limits.rs  mod.rs  security.rs  selftest.rs  serve.rs  sql.rs  table.rs
crates/lake-cli/tests/: ci_bootstrap.rs  kubernetes_manifests.rs  logging.rs  release_artifacts.rs  site_contract.rs
crates/lake-common/: AGENT.md  Cargo.toml
crates/lake-common/src/: data_location.rs  episode_manifest.rs  episode_manifest_tests.rs  file_write.rs  ids.rs  lib.rs  location.rs  managed_stage.rs  object_reference.rs  principal.rs  robotics.rs
crates/lake-engine/: AGENT.md  Cargo.toml
crates/lake-engine-lance/: AGENT.md  Cargo.toml
crates/lake-engine-lance/src/: lib.rs  manifest_store.rs
crates/lake-engine-lance/tests/: s3_lance_localstack.rs
crates/lake-engine/src/: engine.rs  error.rs  lib.rs
crates/lake-flight/: AGENT.md  Cargo.toml
crates/lake-flight/src/: lib.rs
crates/lake-iceberg/: AGENT.md  Cargo.toml
crates/lake-iceberg/src/: lib.rs
crates/lake-iceberg/tests/: catalog.rs  config.rs
crates/lake-iceberg/tests/fixtures/: rest_load_table_response.json
crates/lake-manifest/: AGENT.md  Cargo.toml
crates/lake-manifest/src/: commit.rs  error.rs  lib.rs  model.rs
crates/lake-meta/: AGENT.md  Cargo.toml
crates/lake-meta/src/: dynamo.rs  dynamo_layout.rs  dynamo_migration.rs  error.rs  lib.rs  registry.rs  rocks.rs  store.rs  telemetry.rs
crates/lake-meta/tests/: dynamo_localstack.rs
crates/lake-metasrv/: AGENT.md  Cargo.toml
crates/lake-metasrv/src/: control.rs  drop_tombstone.rs  election.rs  fenced_meta.rs  leadership.rs  lib.rs  maintenance.rs  operation.rs  placement.rs  telemetry.rs
crates/lake-metasrv/tests/: two_node_forwarding.rs
crates/lake-objects/: AGENT.md  Cargo.toml
crates/lake-objects/src/: checkpoint.rs  episode_table.rs  gc.rs  gc_apply.rs  gc_plan.rs  integrity.rs  inventory.rs  lib.rs  local.rs  reference_index.rs  s3.rs
crates/lake-objects/tests/: s3_localstack.rs
crates/lake-query/: AGENT.md  Cargo.toml
crates/lake-query/src/: async_ipc.rs  async_query.rs  async_scheduler.rs  catalog_client.rs  flight.rs  lib.rs  telemetry.rs  ticket.rs
crates/lake-query/tests/: AGENT.md  adbc_interop.rs  file_append_proxy.rs  iceberg_rest_fixture.rs
crates/lake-sdk/: AGENT.md  Cargo.toml
crates/lake-sdk/examples/: AGENT.md  async_query.rs  managed_file.rs
crates/lake-sdk/src/: append_checkpoint.rs  lib.rs
deploy/: AGENT.md  kind-config.yaml  localstack.yaml
docs/: AGENT.md  architecture.md
harness/: AGENT.md  stages.toml
scripts/: AGENT.md  check-conventional-commit.ts  doctor.ts  spec-lifecycle-guard.test.ts  spec-lifecycle-guard.ts  spec-selftest.ts  test-env.ts  test-iceberg-env.ts  test-iceberg-integration-env.test.ts  test-iceberg-integration-env.ts  test-iceberg-integration.ts  test-integration-env.test.ts  test-integration-env.ts  test-integration.ts
site/: .prettierignore  .prettierrc  AGENT.md  README.md  astro-paper.config.ts  astro.config.ts  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
site/src/: app.tsx  (+6 more)
specs/: AGENT.md  README.md  issue-100-catalog-directory-generation.spec.md  issue-102-bounded-s3-upload-pipeline.spec.md  issue-104-cancel-safe-s3-uploads.spec.md  issue-106-encrypted-statement-tickets.spec.md  issue-108-pinned-statement-snapshots.spec.md  issue-11-stage-discovery.spec.md  issue-110-async-query-results.spec.md  issue-112-async-query-resume.spec.md  issue-114-adbc-flight-interop.spec.md  issue-116-tenant-query-admission.spec.md  issue-118-async-tenant-fairness.spec.md  issue-120-async-result-streaming.spec.md  issue-122-query-catalog-client.spec.md  issue-124-query-manifest-authority.spec.md  issue-126-async-tenant-resource-quotas.spec.md  issue-128-stream-direct-sql-results.spec.md  issue-130-async-result-manifest-memory.spec.md  issue-132-sdk-local-flight-result-endpoints.spec.md  issue-135-stream-managed-file-example-reads.spec.md  issue-138-control-enumeration.spec.md  issue-14-flight-security.spec.md  issue-140-credentialless-read-capabilities.spec.md  issue-142-credentialless-direct-reader.spec.md  issue-149-no-proxy-direct-reader.spec.md  issue-150-s3-multipart-scale.spec.md  issue-152-dynamo-table-readiness.spec.md  issue-154-exact-range-reads.spec.md  issue-161-local-upload-cancellation.spec.md  issue-162-ipc-decode-memory.spec.md  issue-17-query-admission.spec.md  issue-174-async-ticket-budget.spec.md  issue-178-async-poll-decode-limit.spec.md  issue-184-release-image.spec.md  issue-185-guarded-operation-gc-test.spec.md  issue-188-iceberg-rest-federation.spec.md  issue-19-graceful-shutdown.spec.md  issue-199-iceberg-rest-auth.spec.md  issue-202-iceberg-oauth-token-retry.spec.md  (+74 more)
src/: catalog.rs  error.rs  main.rs  manifest.rs  meta.rs
verification/: issue-100-catalog-directory-generation.md  issue-102-bounded-s3-upload-pipeline.md  issue-104-cancel-safe-s3-uploads.md  issue-106-encrypted-statement-tickets.md  issue-108-pinned-statement-snapshots.md  issue-11-stage-discovery.md  issue-110-async-query-results.md  issue-112-async-query-resume.md  issue-114-adbc-flight-interop.md  issue-116-tenant-query-admission.md  issue-118-async-tenant-fairness.md  (+75 more)
(+142 files in other folders)
