[workspace]
resolver = "3"
members = [
    "crates/lake-common",
    "crates/lake-meta",
    "crates/lake-engine",
    "crates/lake-engine-lance",
    "crates/lake-catalog",
    "crates/lake-query",
    "crates/lake-metasrv",
    "crates/lake-cli",
    "crates/lake-objects",
    "crates/lake-sdk",
    "crates/lake-flight",
    "crates/lake-iceberg",
]
exclude = ["third_party/datafusion-execution"]

[workspace.metadata.cargo-shear]
# lake-sdk is the public entry crate; it is intentionally declared as a
# workspace dependency for version unification even though no internal member
# depends on it yet.
ignored = ["lake-sdk"]

[workspace.package]
version = "1.8.4"
edition = "2024"
license = "Apache-2.0"
authors = ["crrow"]
repository = "https://github.com/rararulab/lake"
publish = false

[workspace.dependencies]
# DataFusion/arrow are pinned to what lance 8 depends on (datafusion 53 /
# arrow 55): the storage engine and query engine MUST share one datafusion,
# or LanceTableProvider cannot be registered into our SessionContext.
# datafusion 53.1 and lance 8 both resolve to arrow 58.3 — pin our direct
# arrow/arrow-flight to the same major so there is one arrow in the graph.
anyhow = "^1.0"
arrow = "^58.0"
arrow-flight = { version = "^58.0", features = ["flight-sql-experimental"] }
async-trait = "^0.1"
axum = { version = "^0.8", default-features = false, features = ["http1", "tokio"] }
aws-config = "^1.5"
aws-sdk-dynamodb = "^1.60"
bon = "^3.9"
bytes = "^1.12"
aws-sdk-s3 = "^1.60"
datafusion = "^53.0"
futures = "^0.3"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "b882e63652f4d4a172812994679a1dbc0c64cbd0" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "b882e63652f4d4a172812994679a1dbc0c64cbd0" }
iceberg-datafusion = { git = "https://github.com/apache/iceberg-rust", rev = "b882e63652f4d4a172812994679a1dbc0c64cbd0" }
iceberg-storage-opendal = { git = "https://github.com/apache/iceberg-rust", rev = "b882e63652f4d4a172812994679a1dbc0c64cbd0" }
lance = "^8.0"
lance-table = "^8.0"
libc = "^0.2"
moka = { version = "^0.12", features = ["future"] }
metrics = "^0.24"
metrics-exporter-prometheus = { version = "^0.18", default-features = false }
object_store = "^0.13"
opentelemetry = { version = "^0.32", features = ["trace"] }
opentelemetry-otlp = { version = "^0.32", default-features = false, features = ["grpc-tonic", "tls-ring", "tls-webpki-roots", "trace"] }
opentelemetry_sdk = { version = "^0.32", features = ["trace"] }
prost = "^0.14"
prost-types = "^0.14"
reqwest = { version = "^0.13", default-features = false }
ring = "^0.17"
rocksdb = "^0.24"
rustls = { version = "^0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
sha2 = "^0.10"
snafu = "^0.9"
tokio = { version = "^1.52", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
tokio-util = "^0.7"
# tonic/prost pinned to what arrow-flight 58 uses (tonic 0.14 / prost 0.14),
# so the Flight service types share one tonic with our transport Server.
tonic = { version = "^0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-health = "^0.14"
tracing = "^0.1"
tracing-opentelemetry = "^0.33"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt", "json"] }
subtle = "^2.6"
url = "^2.5"
uuid = { version = "^1.23", features = ["v7"] }

lake-common = { path = "crates/lake-common" }
lake-meta = { path = "crates/lake-meta" }
lake-engine = { path = "crates/lake-engine" }
lake-engine-lance = { path = "crates/lake-engine-lance" }
lake-catalog = { path = "crates/lake-catalog" }
lake-objects = { path = "crates/lake-objects" }
lake-query = { path = "crates/lake-query" }
lake-sdk = { path = "crates/lake-sdk" }
lake-metasrv = { path = "crates/lake-metasrv" }
lake-flight = { path = "crates/lake-flight" }
lake-iceberg = { path = "crates/lake-iceberg" }

[patch.crates-io]
# DataFusion 53.1 increments global spill accounting before enforcing its disk
# ceiling and fails to roll the increment back. Keep this narrow backport until
# Lance can move to a DataFusion release whose spill writer reserves quota
# atomically (upstream refactored this path after 54).
datafusion-execution = { path = "third_party/datafusion-execution" }

[workspace.lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }
dead_code = "allow"
unreachable_pub = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Mechanized style rules from docs/guides/rust-style.md. "warn" is
# deny in practice: prek / CI clippy runs with `-D warnings`.
unwrap_used = "warn"   # rust-style.md: `.expect("context")` over `unwrap()` in non-test code
todo = "warn"          # unfinished code must not ship; use an error or an issue instead
unimplemented = "warn" # same as todo; test mocks carry per-site #[expect]
dbg_macro = "warn"     # dbg! is a local debugging aid, not a logging mechanism
print_stdout = "warn"  # stdout is for CLI output only; rara-cli opts back in at crate root

# Every allow below carries the reason it survives. Removing one is
# welcome but is its own measured change — see the ratchet workflow.
multiple_crate_versions = "allow"                # transitive deps pin conflicting versions; not actionable per-crate
doc_markdown = "allow"                           # false-positive-prone on product/domain names even with doc-valid-idents
items_after_statements = "allow"                 # local helper items next to their use site read fine
redundant_pub_crate = "allow"                    # conflicts with unreachable_pub ratchet: pub(crate) is the target state
significant_drop_tightening = "allow"            # nursery; noisy false positives around lock guard lifetimes
future_not_send = "allow"                        # nursery; fires on futures that are intentionally single-threaded
missing_errors_doc = "allow"                     # snafu display messages document errors; per-fn # Errors adds noise
cargo_common_metadata = "allow"                  # internal workspace crates are publish = false
must_use_candidate = "allow"                     # blanket #[must_use] churn without catching real bugs
missing_const_for_fn = "allow"                   # nursery; const-ness is not part of these APIs' contract
missing_panics_doc = "allow"                     # internal APIs: panics are bugs, not documented contract
cast_possible_wrap = "allow"                     # numeric casts reviewed at call sites; try_from churn not worth it
cast_possible_truncation = "allow"               # see cast_possible_wrap
cast_sign_loss = "allow"                         # see cast_possible_wrap
use_self = "allow"                               # pedantic style churn; explicit type names read fine
needless_pass_by_value = "allow"                 # by-value signatures often intentional (ownership transfer)
or_fun_call = "allow"                            # eager or() args are cheap here; rewrite is churn
option_if_let_else = "allow"                     # nursery; suggested combinators often less readable than match
unused_async = "allow"                           # async fns kept for trait/API uniformity
single_match_else = "allow"                      # match over if-let-else is house style for two-way branches
map_unwrap_or = "allow"                          # map().unwrap_or() reads fine; style churn
from_over_into = "allow"                         # existing Into impls predate the rule; no behavior change
derivable_impls = "allow"                        # manual impls document intent for non-trivial defaults
cast_lossless = "allow"                          # see cast_possible_wrap
needless_raw_string_hashes = "allow"             # raw strings kept uniform across SQL/regex/JSON literals
similar_names = "allow"                          # pedantic; flags idiomatic pairs like req/res
iter_on_single_items = "allow"                   # explicit iterators over once()/empty() read fine
collapsible_if = "allow"                         # nested ifs often clearer than long && chains
result_large_err = "allow"                       # snafu error enums are large by design; boxing is churn
unreadable_literal = "allow"                     # digit separators enforced case-by-case in review
trivially_copy_pass_by_ref = "allow"             # &T signatures kept for API uniformity
manual_let_else = "allow"                        # let-else adopted case-by-case, not by blanket rewrite
clone_on_copy = "allow"                          # mechanical cleanup, not correctness; future sweep
default_trait_access = "allow"                   # Default::default() vs T::default() is style churn
unused_self = "allow"                            # methods keep self for trait/API uniformity
match_same_arms = "allow"                        # merged arms can hide distinct domain cases
uninlined_format_args = "allow"                  # mass churn across the codebase; no behavior change
redundant_clone = "allow"                        # nursery; known false positives on borrowed-then-moved values
implicit_clone = "allow"                         # pedantic style churn (to_owned vs clone)
needless_continue = "allow"                      # explicit continue documents loop intent
format_push_string = "allow"                     # perf micro-opt; not on hot paths
redundant_closure_for_method_calls = "allow"     # closure form often clearer with type inference
used_underscore_binding = "allow"                # underscore bindings mark intentionally-unused-but-named values
manual_string_new = "allow"                      # String::from("") vs String::new() is style churn
new_without_default = "allow"                    # Default is opt-in per type; config structs must not derive it
unnecessary_literal_bound = "allow"              # false positives on trait impls returning &'static str
unnecessary_wraps = "allow"                      # Result/Option signatures kept for trait/API uniformity
needless_collect = "allow"                       # nursery; known false positives on multi-use iterators
derive_partial_eq_without_eq = "allow"           # Eq derivation left to type authors; churn
unnecessary_lazy_evaluations = "allow"           # unwrap_or_else kept uniform regardless of arg cost
too_many_lines = "allow"
unnecessary_map_or = "allow"                     # style churn from a newer lint; no behavior change
too_long_first_doc_paragraph = "allow"           # doc style; long lead paragraphs accepted
match_wildcard_for_single_variants = "allow"     # wildcard arms intentionally guard against enum growth
assigning_clones = "allow"                       # clone_into micro-opt; not on hot paths
large_futures = "allow"                          # kernel futures are large by design; boxing is churn
manual_strip = "allow"                           # mechanical cleanup, not correctness; future sweep
branches_sharing_code = "allow"                  # nursery; merging shared tails often hurts readability
write_with_newline = "allow"                     # explicit \n accepted; writeln! conversion is churn
ignored_unit_patterns = "allow"                  # pedantic style churn (() vs _)
cast_precision_loss = "allow"                    # see cast_possible_wrap
manual_is_multiple_of = "allow"                  # % reads fine; churn from a newer lint
stable_sort_primitive = "allow"                  # sort_unstable micro-opt; not on hot paths
ref_option = "allow"                             # &Option<T> signatures kept; changing them is API churn
unnested_or_patterns = "allow"                   # nested or-patterns read fine
needless_borrows_for_generic_args = "allow"      # known false positives with impl Trait args
question_mark = "allow"                          # explicit matches kept where ? would hide control flow
redundant_closure = "allow"                      # closure form often clearer with type inference
literal_string_with_formatting_args = "allow"    # false positives on strings containing braces (JSON templates)
semicolon_if_nothing_returned = "allow"          # pedantic style churn
float_cmp = "allow"                              # float comparisons reviewed at call sites; epsilon wrappers are churn
needless_update = "allow"                        # ..Default::default() spread kept for forward-compat on struct growth
field_reassign_with_default = "allow"            # init-then-assign accepted where builders don't apply
option_option = "allow"                          # Option<Option<T>> distinguishes absent vs explicitly-null
too_many_arguments = "allow"                     # legacy constructors; the fix is bon migration, tracked separately
needless_for_each = "allow"                      # for_each kept at the end of iterator pipelines
