[package]
name = "lake-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DataFusion catalog over the KV metastore: pointer -> manifest -> parquet"

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lake-manifest = { workspace = true }
lake-meta = { workspace = true }

[lints]
workspace = true
