[package]
name = "lake-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "db→table registry and DataFusion catalog over the storage engine"

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-meta = { workspace = true }
moka = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
lake-engine-lance = { workspace = true }
tempfile = "3"

[lints]
workspace = true
