[package]
name = "lake-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "The all-in-one lake CLI: run servers, query, ingest, admin"

[[bin]]
name = "lake"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
datafusion = { workspace = true }
futures = { workspace = true }
lake-catalog = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-engine-lance = { workspace = true }
lake-meta = { workspace = true }
lake-metasrv = { workspace = true }
lake-query = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
