[package]
name = "lake-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "The all-in-one lake CLI: run servers, query, ingest, admin"

[[bin]]
name = "lake"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
arrow-flight = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
datafusion = { workspace = true }
futures = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-engine-lance = { workspace = true }
lake-flight.workspace = true
lake-iceberg = { workspace = true }
lake-meta = { workspace = true }
lake-metasrv = { workspace = true }
lake-objects.workspace = true
lake-query = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = "3"

[lints]
workspace = true
