[package]
name = "lake-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Shared newtypes and identifiers used across the lake workspace"

[dependencies]
serde = { workspace = true }

[lints]
workspace = true
