[package]
name = "lake-engine-lance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Lance implementation of the lake storage engine (the only crate that touches lance::)"

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lance = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
