[package]
name = "lake-engine-lance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Lance implementation of the lake storage engine (the only crate that touches lance::)"

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-meta = { workspace = true }
lance = { workspace = true }
lance-table = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
