[package]
name = "lake-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Pluggable storage-engine abstraction: TableEngine / TableHandle traits"

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
lake-common = { workspace = true }
snafu = { workspace = true }

[lints]
workspace = true
