[package]
name = "lake-flight"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Shared Flight TLS and RPC authentication primitives"

[dependencies]
arrow-flight.workspace = true
lake-common.workspace = true
rustls.workspace = true
sha2.workspace = true
snafu.workspace = true
subtle.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
