[package]
name = "lake-iceberg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Read-only, snapshot-pinned Apache Iceberg REST-catalog federation"

[dependencies]
async-trait = { workspace = true }
bon = { workspace = true }
datafusion = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
iceberg-datafusion = { workspace = true }
iceberg-storage-opendal = { workspace = true }
iceberg-reqwest = { package = "reqwest", version = "^0.12", default-features = false, features = ["json", "rustls-tls"] }
snafu = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["net", "test-util"] }

[lints]
workspace = true
