[package]
name = "lake-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Immutable table snapshots and the manifest-then-CAS commit protocol"

[dependencies]
lake-meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
