[package]
name = "lake-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "KV metadata store: version pointers behind the MetaStore trait"

[dependencies]
async-trait = { workspace = true }
rocksdb = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
