[package]
name = "lake-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "HA KV metastore: MetaStore trait, table registry, version pointers"

[dependencies]
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lake-common = { workspace = true }
metrics = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
metrics-exporter-prometheus = { workspace = true }
tempfile = "3"

[lints]
workspace = true
