[package]
name = "lake-metasrv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Stateful metadata-layer server: registry authority and write coordination"

[features]
test = []

[dependencies]
arrow-flight = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lake-catalog = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-flight = { workspace = true }
lake-meta = { workspace = true }
lake-objects.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# The live two-node forwarding test needs a real local-FS storage engine to
# materialize tables; every other crate it uses (arrow-flight, tonic, datafusion,
# lake-meta, …) is already a normal dependency and thus available to tests.
lake-engine-lance = { workspace = true }
rcgen = "^0.13"
tempfile = "3"

[lints]
workspace = true
