[package]
name = "lake-objects"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
lake-common.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "^3.0"

[lints]
workspace = true
