[package]
name = "lake-objects"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
aws-sdk-s3.workspace = true
datafusion.workspace = true
lake-common.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
aws-config.workspace = true
reqwest.workspace = true
tempfile = "^3.0"

[lints]
workspace = true
