[package]
name = "lake-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Stateless query-layer server: Flight SQL over the lake catalog"

[dependencies]
arrow-flight = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lake-catalog = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-flight = { workspace = true }
lake-meta = { workspace = true }
prost = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
lake-engine-lance = { workspace = true }
lake-metasrv = { workspace = true }
tempfile = "3"
prost-types = { workspace = true }
rcgen = "^0.13"

[lints]
workspace = true
