[package]
name = "lake-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Stateless query-layer server: Flight SQL over the lake catalog"

[dependencies]
arrow-flight = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lake-catalog = { workspace = true }
lake-common = { workspace = true }
lake-engine = { workspace = true }
lake-flight = { workspace = true }
lake-meta = { workspace = true }
lake-objects = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
lake-engine-lance = { workspace = true }
lake-metasrv = { workspace = true }
tempfile = "3"
rcgen = "^0.13"
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
