[package]
name = "lake-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
futures.workspace = true
lake-common.workspace = true
lake-flight.workspace = true
lake-objects.workspace = true
prost.workspace = true
prost-types.workspace = true
snafu.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
async-trait.workspace = true
lake-engine.workspace = true
lake-engine-lance.workspace = true
lake-meta.workspace = true
lake-metasrv.workspace = true
lake-query.workspace = true
rcgen = "^0.13"
sha2.workspace = true
tempfile = "^3.0"

[lints]
workspace = true
