[package]
name = "lake-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
futures.workspace = true
lake-common.workspace = true
lake-flight.workspace = true
lake-objects.workspace = true
libc.workspace = true
moka.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest = { workspace = true, features = ["rustls", "stream"] }
serde.workspace = true
snafu.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
lake-engine.workspace = true
lake-engine-lance.workspace = true
lake-meta.workspace = true
lake-metasrv = { workspace = true, features = ["test"] }
lake-query.workspace = true
rcgen = "^0.13"
tempfile = "^3.0"
tokio = { workspace = true, features = ["net"] }

[lints]
workspace = true
